--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta name ="viewport" content="width=device-width, intial-scale=1.0">
 <title>Count Down</title>
 <link rel="stylesheet" href="stylesheet.css">
 </head>
